--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     {% endblock %}
 </head>
 <body class="bg-gray-100 dark:bg-gray-800">
+{% include 'shared/_navbar.html.twig' %}
 {% block body %}{% endblock %}
 </body>
 </html>
