--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -8,15 +8,18 @@
     <div class="py-12 my-12 bg-white dark:bg-gray-700">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10 lg:grid-cols-4">
-                {% for i in 1..8 %}
-                    <div class="shadow-md rounded-2xl">
+                {% for trick in tricks %}
+                    <div class="shadow-md rounded-2xl bg-white dark:bg-gray-800">
                         <img class="object-center object-cover rounded-t-2xl w-full max-h-96 md:h-44 lg:h-52"
-                             src="https://picsum.photos/300/300"
+                             src="{{ trick.mainPicture }}"
                              alt="Tricks Picture">
-                        <div class="bg-white dark:bg-gray-800 rounded-b-2xl">
-                            <h3 class="text-gray-900 dark:text-gray-100 text-center py-3 text-xl">
-                                Trick name {{ i }}
+                        <div class="p-5">
+                            <h3 class="mb-3 text-gray-900 dark:text-gray-100 text-center pb-3 text-xl">
+                                {{ trick.title }}
                             </h3>
+                            <div class="text-center mb-3">
+                                <span class="mx-auto bg-gray-100 rounded-md p-3 text-md">{{ trick.category.name }}</span>
+                            </div>
                         </div>
                     </div>
                 {% endfor %}
