--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
     {% endblock %}
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
+        {{ encore_entry_script_tags('all-pages') }}
     {% endblock %}
 </head>
 <body class="bg-gray-100 dark:bg-gray-800">
