--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -9,28 +9,29 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10 lg:grid-cols-4">
                 {% for trick in tricks %}
-                    <div class="shadow-md rounded-2xl bg-white dark:bg-gray-800">
-                        <img class="object-center object-cover rounded-t-2xl w-full max-h-96 md:h-44 lg:h-52"
-                             src="{{ trick.mainPicture }}"
-                             alt="Tricks Picture">
-                        <div class="p-5">
-                            <h3 class="mb-3 text-gray-900 dark:text-gray-100 text-center pb-3 text-xl">
-                                {{ trick.title }}
-                            </h3>
-                            <div class="text-center mb-3">
-                                <span class="mx-auto bg-gray-100 rounded-md p-3 text-md">{{ trick.category.name }}</span>
+                        <div class="shadow-md rounded-2xl bg-white dark:bg-gray-800">
+                            <img class="object-center object-cover rounded-t-2xl w-full max-h-96 md:h-44 lg:h-52"
+                                 src="{{ trick.mainPicture }}"
+                                 alt="Tricks Picture">
+                            <div class="p-5">
+                                <h3 class="mb-3 text-gray-900 dark:text-gray-100 text-center pb-3 text-xl">
+                                    {{ trick.title }}
+                                </h3>
+                                <div class="text-center mb-3">
+                                    <a href="{{ path('trick_category', {'slug' : trick.category.slug }) }}">
+                                        <span class="mx-auto bg-gray-100 dark:bg-gray-900 dark:text-gray-100 rounded-md px-2 py-1 text-sm">{{ trick.category.name }}</span>
+                                    </a>
+                                </div>
+                                <div class="p-3 text-center">
+                                    <a href="{{ path('show_trick', {'slug' : trick.slug}) }}">
+                                        <button class="rounded-md mx-auto bg-green-900 dark:bg-green-300 dark:text-black text-white px-6 py-3">Voir le trick</button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
                 {% endfor %}
             </div>
         </div>
-    </div>
-
-    <div class="text-center">
-        <button id="toggleBtn" class="mx-auto bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            Toggle Dark Mode
-        </button>
     </div>
 
 {% endblock %}
