--- a/templates/category.html.twig
+++ b/templates/category.html.twig
@@ -6,6 +6,17 @@
 
     <div class="py-12 my-12 bg-white dark:bg-gray-700">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+
+            <nav class="bg-gray-200 dark:bg-gray-900 dark:text-white max-w-3xl p-3 rounded w-full m-4">
+                <ol class="list-reset flex text-grey-dark">
+                    <li>
+                        <a href="{{ path('homepage') }}" class="text-blue font-bold">Accueil</a>
+                    </li>
+                    <li><span class="mx-2">/</span></li>
+                    <li>{{ category.name }}</li>
+                </ol>
+            </nav>
+
             <div class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10 lg:grid-cols-4">
                 {% for trick in category.tricks %}
                     <div class="shadow-md rounded-2xl bg-white dark:bg-gray-800">
