--- a/templates/trick/create.html.twig
+++ b/templates/trick/create.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% form_theme formView 'theme/tailwind_layout.html.twig' %}
-
 {% block body %}
 
     <h1 class="text-2xl mt-12 mx-auto text-center text-grey-800 dark:text-white">Créer un trick</h1>
@@ -10,21 +8,21 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             {{ form_start(formView) }}
             {{ form_errors(formView) }}
-
-            <div class="flex">
-                <div class="w-1/2">
+            <div class="md:flex">
+                <div class="md:w-1/2 w-full px-5">
                     {{ form_row(formView.title) }}
                     {{ form_row(formView.description) }}
                 </div>
-                <div class="w-1/2">
+                <div class="md:w-1/2 w-full px-5">
                     {{ form_row(formView.mainPicture) }}
                     {{ form_row(formView.category) }}
                 </div>
             </div>
 
-            <button type="submit">Sauvegarder</button>
+            <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1" type="submit">Sauvegarder</button>
             {{ form_end(formView) }}
         </div>
     </div>
 
 {% endblock %}
+
