--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -58,8 +58,11 @@
                     <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                         Mon compte
                     </a>
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
+                    <a href="/logout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                         Se déconnecter
+                    </a>
+                    <a href="{{ path('security_login') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
+                        Se connecter
                     </a>
                     <button id="toggleBtn"
                             class="ml-3 mb-2 bg-gray-800 text-white font-bold py-1 px-2 rounded">
