--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,10 +1,18 @@
 {% set menu1 = 'Accueil' %}
 {% set menu1Link = path('homepage') %}
+
 {% set menu2 = "S'inscrire" %}
+{% set menu2Link = path('security_registration') %}
+
 {% set menu3 = "Se connecter" %}
+{% set menu3Link = path('security_login') %}
+
+{% set menu4 = "Se deconnecter" %}
+{% set menu4Link = path('logout') %}
 
 <nav class="bg-gray-900">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+
         <div class="relative flex items-center justify-between h-16">
 
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -31,45 +39,21 @@
                     <div class="flex space-x-4">
                         <a href="{{ menu1Link }}"
                            class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu1 }}</a>
-                        <a href="#"
-                           class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu2 }}</a>
-                        <a href="#"
-                           class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu3 }}</a>
+                        <a href="{{ menu2Link }}"
+                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu2 }}</a>
+                        <a href="{{ menu3Link }}"
+                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu3 }}</a>
+                        <a href="{{ menu4Link }}"
+                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu4 }}</a>
+
                     </div>
                 </div>
             </div>
-            <!-- Profile dropdown -->
-            <div class="ml-3 relative">
-                <div>
-                    {# <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" #}
-                    {# id="user-menu" aria-haspopup="true"> #}
-                    {# <img class="h-8 w-8 rounded-full" #}
-                    {# src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" #}
-                    {# alt=""> #}
-                    {# </button> #}
-                    <button class="bg-gray-100 flex text-lg font-bold rounded px-2 py-1"
-                            id="user-menu" aria-haspopup="true">
-                        <span>Compte</span>
-                    </button>
-                </div>
-                <div id="user-menu-dropdown"
-                     class="invisible origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5"
-                     role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                        Mon compte
-                    </a>
-                    <a href="/logout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                        Se déconnecter
-                    </a>
-                    <a href="{{ path('security_login') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                        Se connecter
-                    </a>
-                    <button id="toggleBtn"
-                            class="ml-3 mb-2 bg-gray-800 text-white font-bold py-1 px-2 rounded">
-                        Switch Dark Mode
-                    </button>
-                </div>
-            </div>
+
+            <button id="toggleBtn"
+                    class="ml-3 mb-2 bg-gray-700 text-white font-bold py-1 px-2 rounded">
+            </button>
+
         </div>
 
     </div>
@@ -80,11 +64,15 @@
         <div class="px-2 pt-2 pb-3 space-y-1">
             <a href="{{ menu1Link }}"
                class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu1 }}</a>
-            <a href="#"
+            <a href="{{ menu2Link }}"
                class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu2 }}</a>
-            <a href="#"
+            <a href="{{ menu3Link }}"
                class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu3 }}</a>
+            <a href="{{ menu4Link }}"
+               class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu4 }}</a>
         </div>
     </div>
+
+
 
 </nav>
