--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Snowtricks | Site communautaire de tricks de Snowboard{% endblock %}
 
 {% block body %}
+
+    {% include 'shared/_flash.html.twig' %}
+
     <h1 class="text-2xl mt-12 mx-auto text-center text-grey-800 dark:text-white">Bienvenue</h1>
 
     <div class="py-12 my-12 bg-white dark:bg-gray-700">
