lost password request + password token email + set new password (DTO used)

--- a/templates/security/password_lost_request.html.twig
+++ b/templates/security/password_lost_request.html.twig
@@ -9,26 +9,17 @@
     <div class="py-12 my-12 bg-white dark:bg-gray-700">
         <div class="max-w-lg mx-auto px-4 sm:px-6 lg:px-8">
 
-            <h1 class="mt-5 text-5xl dark:text-white text-center">Connexion</h1>
-
-            {% if error %}
-                <div class="mt-8 text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+            <h1 class="mt-5 text-5xl dark:text-white text-center">Mot de passe oublié</h1>
 
             {{ form_start(form) }}
             {{ form_errors(form) }}
             {{ form_row(form.username) }}
-            {{ form_row(form.password) }}
-
-            <a class="block mt-5 text-gray-400" href="{{ path('security_password_lost_request') }}">Mot de passe
-                oublié</a>
-
             <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
-                    type="submit">Se connecter
+                    type="submit">Demander un nouveau mot de passe
             </button>
-
             {{ form_end(form) }}
         </div>
     </div>
+
 
 {% endblock %}
