--- a/templates/_tricks.html.twig
+++ b/templates/_tricks.html.twig
@@ -1,15 +1,10 @@
 {% for trick in tricks %}
     <div id="{{ trick.slug }}"
          data-trick-url="{{ trick.slug }}"
-         class="shadow-md rounded-2xl bg-white dark:bg-gray-800">
+         class="shadow-2xl rounded-2xl bg-white dark:bg-gray-800">
 
         <div class="relative">
-            <a href="{{ path('edit_trick', {'slug': trick.slug}) }}">
-                <img class="w-6 absolute right-10 top-2" src="{{ asset('assets/icons/edit.svg') }}" alt="Edit Icon">
-            </a>
-            <a href="{{ path('delete_trick', {'slug': trick.slug}) }}">
-                <img class="w-6 absolute right-2 top-2" src="{{ asset('assets/icons/trash.svg') }}" alt="Delete Icon">
-            </a>
+            {% include '_delete_edit_trick_icons.html.twig' %}
             <img class="object-center object-cover rounded-t-2xl w-full max-h-96 md:h-44 lg:h-52"
                  src="{{ trick.mainPicture }}"
                  alt="Tricks Picture">
