--- a/templates/trick/single.html.twig
+++ b/templates/trick/single.html.twig
@@ -26,12 +26,15 @@
             </nav>
             {{ dump(trick) }}
 
+
             <div>
                 {% for video in trick.videos %}
                     {{ video.link }}<br>
                 {% endfor %}
             </div>
 
+            <img src="{{ asset('assets/uploads/tricks-main-picture/') }}{{ trick.mainPicture }}"
+                 alt="{{ trick.title }} Main Picture">
             <div class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10 lg:grid-cols-4">
             </div>
 
