--- a/templates/_tricks.html.twig
+++ b/templates/_tricks.html.twig
@@ -6,8 +6,8 @@
         <div class="relative">
             {% include '_delete_edit_trick_icons.html.twig' %}
             <img class="object-center object-cover rounded-t-2xl w-full max-h-96 md:h-44 lg:h-52"
-                 src="{{ trick.mainPicture }}"
-                 alt="Tricks Picture">
+                 src="{{ asset('assets/uploads/tricks-main-picture/') }}{{ trick.mainPicture }}"
+                 alt="{{ trick.title }} Main Picture">
         </div>
         <div class="p-5">
             <h3 class="mb-3 text-gray-900 dark:text-gray-100 text-center pb-3 text-xl">
@@ -20,7 +20,7 @@
             </div>
             <div class="p-3 text-center">
                 <a href="{{ path('show_trick', {'slug' : trick.slug}) }}">
-                    <button class="rounded-md mx-auto bg-green-900 dark:bg-green-300 dark:text-black text-white px-6 py-3">
+                    <button class="rounded-md mx-auto bg-gray-900 dark:bg-gray-100 dark:text-black text-white px-6 py-3">
                         Voir le trick
                     </button>
                 </a>
