--- a/templates/trick/create.html.twig
+++ b/templates/trick/create.html.twig
@@ -25,6 +25,10 @@
                 {{ form_row(form.videos) }}
             </div>
 
+            <div class="px-5">
+                {{ form_row(form.pictures) }}
+            </div>
+
             <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
                     type="submit">Sauvegarder
             </button>
@@ -34,6 +38,7 @@
         </div>
     </div>
 
+    {# VIDEO #}
     <script>
         document.addEventListener('DOMContentLoaded', function (event) {
             document.getElementById('add-another-collection-widget').addEventListener('click', function () {
@@ -69,8 +74,44 @@
 
     </script>
 
+    {# PICTURES #}
+    <script>
+        document.addEventListener('DOMContentLoaded', function (event) {
+            document.getElementById('add-another-collection-widget-picture').addEventListener('click', function () {
+                let pictureParent = document.getElementById('trick_create_pictures');
+                const picturewidgetsCounter = document.getElementById('picture-widgets-counter')
+                let index = picturewidgetsCounter.value;
+                let template = pictureParent.dataset.prototype.replace(/__name__/g, index);
+                pictureParent.insertAdjacentHTML('beforeend', template);
+                picturewidgetsCounter.value = parseInt(index) + 1;
+                pictureHandleDeleteBtn();
+            });
+        });
+
+        function pictureHandleDeleteBtn() {
+            let buttons = document.querySelectorAll('button[data-action="delete-picture"]');
+            for (let i = 0; i < buttons.length; i++) {
+                buttons[i].addEventListener('click', function () {
+                    const target = this.dataset.target;
+                    document.getElementById(target).remove();
+                })
+            }
+        }
+        function updatePictureWidgetsCounter() {
+            const elements = document.querySelectorAll('#trick_create_videos > div');
+            const widgetsCounter = document.getElementById('picture-widgets-counter');
+            widgetsCounter.value = elements.length;
+        }
+
+        updatePictureWidgetsCounter();
+
+        pictureHandleDeleteBtn();
+
+    </script>
+
 {% endblock %}
 
+{#VIDEOS#}
 
 {% block _trick_create_videos_entry_widget %}
 
@@ -107,6 +148,47 @@
             class="bg-blue-700 mt-5 text-white px-3 py-2 rounded-md"
             data-list-selector="#email-fields-list">
         Ajouter une video
+    </button>
+
+{% endblock %}
+
+{#PICTURE#}
+
+{% block _trick_create_pictures_entry_widget %}
+
+    <div id="block_{{ id }}" class="w-full md:w-1/2 px-0 md:px-5">
+        <div class="flex items-baseline">
+            <div class="w-full">
+                {{ form_widget(form) }}
+            </div>
+            <button type="button"
+                    data-action="delete-picture"
+                    data-target="block_{{ id }}"
+                    class="ml-5 self-end bg-red-700 text-white px-3 py-2 rounded-md">X
+            </button>
+        </div>
+
+        {# {% if value.link is defined %} #}
+        {# {{ value.link }} #}
+        {# {% endif %} #}
+
+    </div>
+{% endblock %}
+
+{% block _trick_create_pictures_entry_row %}
+    {{ form_widget(form) }}
+{% endblock %}
+
+{% block _trick_create_pictures_widget %}
+    {{ form_widget(form, { 'attr': {'class': 'w-full md:flex flex-wrap'} }) }}
+
+    <input type="hidden" id="picture-widgets-counter" value="0">
+
+    <button type="button"
+            id="add-another-collection-widget-picture"
+            class="bg-blue-700 mt-5 text-white px-3 py-2 rounded-md"
+            data-list-selector="#email-fields-list">
+        Ajouter une image
     </button>
 
 {% endblock %}
